testing/errors/alreadydefined1.a
	a = 3
	a = 3.0	; -> "already defined" (type has changed)
